--- a/package.xml
+++ b/package.xml
@@ -7,6 +7,7 @@
     <maintainer email="mocun@orbbec.com">Joe Dong</maintainer>
     <license>Apache License 2.0</license>
     <buildtool_depend>catkin</buildtool_depend>
+    <depend>backward_ros</depend>
     <depend>camera_info_manager</depend>
     <depend>cv_bridge</depend>
     <depend>dynamic_reconfigure</depend>
