--- a/.gitignore
+++ b/.gitignore
@@ -141,7 +141,7 @@ dist/
 downloads/
 eggs/
 .eggs/
-lib/
+# lib/
 lib64/
 parts/
 sdist/
@@ -403,11 +403,11 @@ mono_crash.*
 [Dd]ebugPublic/
 [Rr]elease/
 [Rr]eleases/
-x64/
-x86/
-[Ww][Ii][Nn]32/
-[Aa][Rr][Mm]/
-[Aa][Rr][Mm]64/
+# x64/
+# x86/
+# [Ww][Ii][Nn]32/
+# [Aa][Rr][Mm]/
+# [Aa][Rr][Mm]64/
 bld/
 [Bb]in/
 [Oo]bj/
