Add service switch and parameter setting interface for DecimationFilter, HDRMerge, SequencedIdFilter, ThresholdFilter, NoiseRemovalFilter, HardwareNoiseRemoval, SpatialAdvancedFilter and TemporalFilter

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -78,6 +78,7 @@ set(SERVICE_FILES
   GetCameraParams.srv
   GetDeviceInfo.srv
   GetInt32.srv
+  SetFilter.srv
   GetString.srv
   SetInt32.srv
   SetString.srv
