Update camera control and launch parameters for new spatial filters and mean intensity setting
- Added support for SpatialFastFilter and SpatialModerateFilter in camera control services.
- Replaced deprecated depth_brightness parameter with mean_intensity_set_point in launch files and camera node.
- Updated launch files to include new spatial filter parameters and enable flags.
- Modified camera node implementation to handle new parameters and filters.
- Bumped package version to 2.4.6.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,17 +1,21 @@
 {
     "files.associations": {
-        "array": "cpp",
-        "deque": "cpp",
-        "forward_list": "cpp",
-        "list": "cpp",
-        "string": "cpp",
-        "unordered_map": "cpp",
-        "unordered_set": "cpp",
-        "vector": "cpp",
-        "string_view": "cpp",
-        "initializer_list": "cpp",
-        "ranges": "cpp",
-        "regex": "cpp",
-        "valarray": "cpp"
+      "array": "cpp",
+      "deque": "cpp",
+      "forward_list": "cpp",
+      "list": "cpp",
+      "string": "cpp",
+      "unordered_map": "cpp",
+      "unordered_set": "cpp",
+      "vector": "cpp",
+      "string_view": "cpp",
+      "initializer_list": "cpp",
+      "ranges": "cpp",
+      "regex": "cpp",
+      "valarray": "cpp",
+      "random": "cpp",
+      "bitset": "cpp",
+      "utility": "cpp",
+      "system_error": "cpp"
     }
 }
