--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,6 +16,58 @@
       "random": "cpp",
       "bitset": "cpp",
       "utility": "cpp",
-      "system_error": "cpp"
+      "system_error": "cpp",
+      "cctype": "cpp",
+      "clocale": "cpp",
+      "cmath": "cpp",
+      "cstdarg": "cpp",
+      "cstddef": "cpp",
+      "cstdio": "cpp",
+      "cstdlib": "cpp",
+      "cstring": "cpp",
+      "ctime": "cpp",
+      "cwchar": "cpp",
+      "cwctype": "cpp",
+      "any": "cpp",
+      "atomic": "cpp",
+      "strstream": "cpp",
+      "bit": "cpp",
+      "cfenv": "cpp",
+      "chrono": "cpp",
+      "codecvt": "cpp",
+      "complex": "cpp",
+      "condition_variable": "cpp",
+      "cstdint": "cpp",
+      "map": "cpp",
+      "set": "cpp",
+      "exception": "cpp",
+      "algorithm": "cpp",
+      "functional": "cpp",
+      "iterator": "cpp",
+      "memory": "cpp",
+      "memory_resource": "cpp",
+      "numeric": "cpp",
+      "optional": "cpp",
+      "ratio": "cpp",
+      "tuple": "cpp",
+      "type_traits": "cpp",
+      "fstream": "cpp",
+      "iomanip": "cpp",
+      "iosfwd": "cpp",
+      "iostream": "cpp",
+      "istream": "cpp",
+      "limits": "cpp",
+      "mutex": "cpp",
+      "new": "cpp",
+      "ostream": "cpp",
+      "shared_mutex": "cpp",
+      "sstream": "cpp",
+      "stdexcept": "cpp",
+      "streambuf": "cpp",
+      "thread": "cpp",
+      "cinttypes": "cpp",
+      "typeindex": "cpp",
+      "typeinfo": "cpp",
+      "variant": "cpp"
     }
 }
