Install OrbbecSDK libraries to share directory

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -279,6 +279,7 @@ if(DEFINED ENV{BUILDING_PACKAGE})
   )
 endif()
 
+install(DIRECTORY SDK/lib/ DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/SDK/lib)
 install(DIRECTORY include DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}/)
 install(DIRECTORY ${ORBBEC_INCLUDE_DIR} DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}/)
 install(DIRECTORY launch DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION})
