--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,9 +1,15 @@
 name: Deploy Docs
 
+concurrency:
+  group: docs-${{ github.ref }}
+  cancel-in-progress: true
+
 on:
   push:
-    branches:
-      - Document
+    branches: [ Document ]
+    paths:
+      - 'docs/**'
+      - '.github/workflows/build.yaml'
   workflow_dispatch:
 
 jobs:
@@ -17,15 +23,51 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: "3.12"
+          python-version: '3.12'
+
+      - name: Cache pip
+        uses: actions/cache@v3
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install sphinx recommonmark sphinx-rtd-theme sphinx-markdown-tables
+          pip install sphinx recommonmark sphinx-rtd-theme sphinx-markdown-tables myst-parser
+          # 如果有自定义扩展还需本地路径可导入
+          echo 'PYTHONPATH=docs' >> $GITHUB_ENV
 
-      - name: Build HTML
-        run: sphinx-build -b html docs docs/_build/html
+      - name: Build EN docs
+        run: |
+          sphinx-build -b html -W --keep-going docs/en docs/en/_build/html
+
+      - name: Build ZH docs
+        run: |
+          sphinx-build -b html -W --keep-going docs/zh docs/zh/_build/html
+
+      - name: Assemble site
+        run: |
+          rm -rf site
+          mkdir -p site/en site/zh
+          cp -r docs/en/_build/html/* site/en/
+          cp -r docs/zh/_build/html/* site/zh/
+          # 生成一个根 index.html 做语言跳转
+          cat > site/index.html <<'EOF'
+          <!DOCTYPE html><html><head><meta charset="utf-8"><title>Orbbec Docs</title>
+          <meta http-equiv="refresh" content="0; url=en/index.html">
+          </head><body>
+          <p>If redirect fails, choose: <a href="en/index.html">English</a> | <a href="zh/index.html">中文</a></p>
+          </body></html>
+          EOF
+
+      - name: Upload artifact (preview)
+        uses: actions/upload-artifact@v4
+        with:
+          name: docs-site
+          path: site
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v4
@@ -33,4 +75,5 @@ jobs:
           deploy_key: ${{ secrets.DEPLOY_KEY }}
           external_repository: orbbec/OrbbecSDK_ROS1
           publish_branch: gh-pages
-          publish_dir: docs/_build/html
+          publish_dir: site
+          force_orphan: true
